Убрал у книги поле с датой выдачи и переделал для этого необходимые методы